master - additional fixes to make sure img appears on top of content when on smaller sizes; spacing between text and carousel increased

--- a/css/resume.css
+++ b/css/resume.css
@@ -95,6 +95,20 @@ p.lead {
   max-width: 500px;
 }
 
+.order--1 {
+  -webkit-box-ordinal-group: 0;
+  -ms-flex-order: -1;
+  order: -1;
+}
+
+@media (min-width: 768px) {
+  .order-md-1 {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1;
+  }
+}
+
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
